chapter13/sample-fsgroup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-fsgroup
spec:
  containers:
  - name: nginx-container
    image: nginx:1.16
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir: {}
  securityContext:
    fsGroup: 1001
