chapter13/sample-nonroot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-nonroot
spec:
  containers:
  - name: nginx-container
    image: nginx:1.16
  securityContext:
    runAsNonRoot: true
