chapter13/sample-serviceaccount-noautomount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-noautomount-pod
  namespace: default
spec:
  containers:
  - name: nginx-container
    image: nginx:1.16
  serviceAccountName: sample-serviceaccount-noautomount
  automountServiceAccountToken: true
