chapter13/sample-serviceaccount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-pod
spec:
  serviceAccountName: sample-serviceaccount
  containers:
  - name: nginx-container
    image: nginx:1.16
