chapter13/deny-all-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-networkpolicy
spec:
  # Deny all traffics(Used to configure network policy as whitelist)
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
