chapter13/sample-podselector-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-podselector-ingress-networkpolicy
spec:
  # Which pod becomes the target of this policy 
  podSelector:
    matchLabels:
      name: np2
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Where are traffics from
    - podSelector:
        matchLabels:
          app: np1
    ports:
    - protocol: TCP
      port: 80
